# Knowledge

./: .env.temp  .gitignore  LangChain_Study.py  README.md  api_feishu_knowledge.py  api_rag_knowledge.py  api_server.py  langchain_knowledge.py  langchain_knowledge.py.bak  process_feishu_knowledge.py  process_word_knowledge.py  pyproject.toml  requirements.txt  start_api_server.bat  start_api_server.sh  start_feishu_api.bat  start_feishu_knowledge.bat  start_rag_api.bat  start_rag_api.sh  test_dotenv.py
docker/: Dockerfile  README.md  docker-compose.yml
