[project]
name = "langchain-study"
version = "0.1.0"
authors = [
  { name = "Developer", email = "developer@example.com" }
]
requires-python = ">=3.13"
description = "基于LangChain和DeepSeek的知识库问答系统"
license = { text = "MIT" }
keywords = ["langchain", "deepseek", "llm", "rag", "knowledge-base"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
readme = "README.md"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-openai>=0.3.30",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
    "docx2txt>=0.9",  # 用于提取Word文档文本和图像
    "feishu-sdk-python>=0.0.1",  # 飞书官方Python SDK，用于更方便地调用飞书API
]

[tool.uv.dependency-groups]
main = [
    "langchain==*",
    "langchain-openai==*",
    "langchain-community==*",
    "langchain-deepseek==*",
    "python-dotenv==*",
    "sentence-transformers==*",
    "faiss-cpu==*",
    "requests==*",
    "pydantic==*",
    "fastapi==*",
    "uvicorn==*",
    "python-multipart==*",
    "docx2txt==*",  # 用于提取Word文档文本和图像
    "feishu-sdk-python==*",  # 飞书官方Python SDK，用于更方便地调用飞书API
]

# 多模型支持依赖
# 如需使用千问模型，请取消下面的注释
# langchain-huggingface = "*"

# 如需使用Ollama本地模型，请取消下面的注释
# langchain-ollama = "*"
